--- a/assets/style.css
+++ b/assets/style.css
@@ -3,12 +3,16 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+body{
+    display: flex;
+}
 header{
     width: 100%;
     height: 70px;
     /* border: 1px solid blue; */
     position: fixed;
+    z-index: 99999;
+    background: #fff;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
 
 }
@@ -43,4 +47,58 @@ header{
 .tabs ul li a{
     text-decoration: none;
     font-size: 1.1rem;
+    color: black;
+}
+
+.tabs ul li:nth-child(1) a{
+    color: green;
+    font-weight: bold;
+}
+
+.tabs ul li:nth-child(3) a .dropdown{
+    color: green;
+    font-weight: bold;
+    width: 150px;
+    height: 100px;
+    /* border: 1px solid blue; */
+    position:absolute;
+    background: #ccc;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    display: flex;
+    opacity: 0;
+    flex-direction: column;
+    transition: 0.3s ease-in;
+}
+
+.tabs ul li:nth-child(3) a:hover .dropdown{
+    opacity: 1;
+}
+
+.dropdown p{
+    color: black;
+    font-weight: lighter;
+    text-align: center;
+}
+.tabs ul li:nth-child(3) a .dropdown a{
+    display: flex;
+    
+}
+
+
+
+.container{
+    width: 100%;
+    height: auto;
+    margin-top: 3%;
+    border: 2px solid red;
+    z-index: 0;
+}
+
+.container .row{
+    width: 100%;
+    height: 600px;
+    background-image: url(img/home01.jpg);
+    background-size: contain;
+    /* margin-top: 10%; */
 }
