--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@ header{
     position: fixed;
     z-index: 99999;
     background: #fff;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
+    box-shadow: 0 .5rem 1rem rgba(112, 111, 111, 0.15) !important;
 
 }
 .header-row{
@@ -22,19 +22,20 @@ header{
     display: flex;
 }
 .header-logo{
-    width: 13%;
-    height: 70%;
+    width: 10%;
+    height: 60%;
     /* border: 1px solid red; */
     display: flex;
-    margin: 0.5rem 0 0 3rem;
+    align-items: center;
+    justify-content: center;
+    margin: 0.5rem 0 0 3.5rem;
 }
 
 .tabs{
     width: 30%;
     height: 100%;
+    margin-left: 3rem;
     /* border: 1px solid green; */
-    
-
 }
 
 .tabs ul{
@@ -48,19 +49,20 @@ header{
     text-decoration: none;
     font-size: 1.1rem;
     color: black;
+    font-size: 15px;
 }
 
 .tabs ul li:nth-child(1) a{
-    color: green;
-    font-weight: bold;
+    color: rgb(31, 198, 157);
+    font-weight: 600;
 }
 
 .tabs ul li:nth-child(3) a .dropdown{
-    color: green;
+    color: rgb(71, 199, 71);
     font-weight: bold;
     width: 150px;
     height: 100px;
-    /* border: 1px solid blue; */
+    border: 1px solid blue;
     position:absolute;
     background: #ccc;
     border: 1px solid #fff;
@@ -82,16 +84,13 @@ header{
 }
 .tabs ul li:nth-child(3) a .dropdown a{
     display: flex;
-    
 }
-
-
 
 .container{
     width: 100%;
     height: auto;
     margin-top: 3%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     z-index: 0;
 }
 
@@ -100,5 +99,86 @@ header{
     height: 600px;
     background-image: url(img/home01.jpg);
     background-size: contain;
-    /* margin-top: 10%; */
+    border: 2px solid red;
+    /* padding-top: 46%; */
 }
+
+.text1{
+    /* border: 2px solid yellow; */
+    height: 54%;
+    width: 53%;
+    color: rgb(45, 27, 110);
+    font-size:  1.04vw;
+    line-height: 2rem;
+    letter-spacing: 1px;
+    margin-left: 3.5rem;
+    margin-top: 5rem;
+    font-family: sans-serif;
+    font-weight: 400;
+}
+
+h1{
+    /* border: 2px solid orange; */
+    height: 25%;
+    width: 100%;
+    font-size: 54px;
+    font-weight: 900;
+    letter-spacing: normal;
+    line-height: normal;
+    margin-bottom: 1.6rem;
+    font-family: sans-serif;
+    color: white;
+}
+
+.cbn{
+    color: rgba(255, 255, 255, 0.863);
+    margin-left: 3.5rem;
+    margin-top: 1.7rem;
+    font-weight: 600;
+    font-size: larger;
+    /* border: 2px solid orange; */
+    width: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.ndic{
+    font-size: 1.6rem;
+    font-weight: 700;
+}
+
+.row2{
+    border: 2px solid blue;
+    height: 550px;
+    width: 100%;
+    display: flex;
+}
+
+.slide1{
+    border: 2px solid green;
+    width: 20%;
+    padding-top: 3.5rem;
+    padding-left: 2rem;
+    
+}
+
+.slide2{
+    border: 2px solid rgb(212, 0, 255);
+    width: 20%;
+}
+
+.slide3{
+    border: 2px solid rgb(16, 255, 255);
+    width: 20%;
+}
+
+.slide4{
+    border: 2px solid rgb(57, 3, 255);
+    width: 20%;
+}
+
+.slide5{
+    border: 2px solid rgb(235, 219, 3);
+    width: 20%;
+}
+
